--- a/Proyecto12/Proyecto12/Proyecto12.csproj
+++ b/Proyecto12/Proyecto12/Proyecto12.csproj
@@ -46,25 +46,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="SubirDatosDB.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="SubirDatosDB.Designer.cs">
+      <DependentUpon>SubirDatosDB.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
+    <Compile Include="ConsultarDatosDB.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <Compile Include="ConsultarDatosDB.Designer.cs">
+      <DependentUpon>ConsultarDatosDB.cs</DependentUpon>
+    </Compile>
+    <Compile Include="BuscarXidDB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BuscarXidDB.Designer.cs">
+      <DependentUpon>BuscarXidDB.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="BuscarXidDB.resx">
+      <DependentUpon>BuscarXidDB.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <EmbeddedResource Include="SubirDatosDB.resx">
+      <DependentUpon>SubirDatosDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ConsultarDatosDB.resx">
+      <DependentUpon>ConsultarDatosDB.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
