--- a/GLOBTECx_Cars/GLOBTECx_Cars/GLOBTECx_Cars.csproj
+++ b/GLOBTECx_Cars/GLOBTECx_Cars/GLOBTECx_Cars.csproj
@@ -52,10 +52,19 @@
     <Compile Include="FrmAddCar.Designer.cs">
       <DependentUpon>FrmAddCar.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmVerTodosCar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmVerTodosCar.Designer.cs">
+      <DependentUpon>FrmVerTodosCar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmAddCar.resx">
       <DependentUpon>FrmAddCar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmVerTodosCar.resx">
+      <DependentUpon>FrmVerTodosCar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
